# metadata

./: .gitignore  CMakeLists.txt  README.md
src/: imager.sh  reader.cpp  reader.py  song_metadata.csv
